# thrustr

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.zed/: settings.json
assets/themes/: default.toml
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/component/: config.rs  mod.rs  registry.rs
crates/application/src/game/: dto.rs  mod.rs  query.rs  service.rs
crates/application/src/service/: game.rs
crates/artwork/: Cargo.toml
crates/artwork/src/: color.rs  lib.rs  manager.rs  processing.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/component/: Cargo.toml
crates/component-manager/: Cargo.toml
crates/component-manager/src/: lib.rs
crates/component-manager/src/handles/: mod.rs  storefront.rs
crates/component-registry/: Cargo.toml
crates/component-registry/src/: context.rs  lib.rs
crates/component-registry/src/handles/: mod.rs  storefront.rs
crates/component/src/: registry.rs
crates/component/src/handles/: mod.rs  storefront.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  logging.rs  paths.rs  tls.rs
crates/connectivity/: Cargo.toml
crates/connectivity/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: artwork.rs  game.rs  id.rs  lib.rs  platform.rs  plugin.rs  storage.rs  traits.rs
crates/domain/src/capabilities/: mod.rs  storefront.rs
crates/domain/src/component/: auth.rs  config.rs  error.rs  image.rs  metadata.rs  mod.rs  status.rs  storage.rs  value_objects.rs
crates/domain/src/game/: commands.rs  mod.rs  projections.rs  query.rs  repository.rs  value_objects.rs
crates/domain/src/storage/: game.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: dto.rs  lib.rs  query.rs  service.rs
crates/gpui-tokio/: Cargo.toml
crates/gpui-tokio/src/: lib.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs  manager.rs  processing.rs
crates/infrastructure/persistence/: Cargo.toml
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/pdk/: Cargo.toml
crates/pdk/src/: lib.rs
crates/pdk/src/kv_store/: mod.rs
crates/pdk/wit/: config.wit  kv-store.wit  plugin.wit  storefront.wit  types.wit
crates/plugin/: Cargo.toml
crates/plugin-manager/: Cargo.toml
crates/plugin-manager/src/: adapters.rs  http.rs  lib.rs  plugin.rs
crates/plugin-manager/src/plugin/: manifest.rs  mod.rs  state.rs  storefront.rs  storefront_provider.rs
crates/plugin/src/: lib.rs  manager.rs  service.rs
crates/plugin/src/plugin/: manifest.rs  mod.rs  state.rs
crates/plugin/src/plugin/capabilities/: mod.rs  storefront.rs
crates/plugin/src/plugin/host/: config.rs  http.rs  kv_store.rs  mod.rs
crates/plugin_manager/: Cargo.toml
crates/plugin_manager/src/: lib.rs
crates/ports/: Cargo.toml
crates/ports/src/: lib.rs  manifest.rs  metadata.rs  plugin_storage.rs  storefront.rs
crates/ports/src/capabilities/: mod.rs  storefront.rs
crates/ports/src/component/: config.rs  mod.rs
crates/ports/src/managers/: mod.rs  plugin.rs  storefront.rs
crates/ports/src/providers/: storefront.rs
crates/presentation/thrustr/: Cargo.toml
crates/presentation/ui/: Cargo.toml  README.md
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: game.rs
crates/sqlite/: Cargo.toml
crates/sqlite-storage/: Cargo.toml
crates/sqlite-storage/migrations/2025-12-23-202834_initial/: down.sql  up.sql
crates/sqlite-storage/src/: lib.rs  models.rs  schema.rs
crates/sqlite-storage/src/models/: component.rs  extension.rs  game.rs
crates/sqlite-storage/src/repositories/: component.rs  component_storage.rs  extension_storage.rs  game.rs  mod.rs  plugin_storage.rs
crates/sqlite-storage/src/storage/: component.rs  game.rs
crates/sqlite/examples/: seed_games.rs
crates/sqlite/migrations/2025-12-23-202834_initial/: down.sql  up.sql
crates/sqlite/migrations/20251223-0_initial/: down.sql  up.sql
crates/sqlite/src/: id.rs  lib.rs  schema.rs
crates/sqlite/src/models/: artwork.rs  component.rs  game.rs  mod.rs
crates/sqlite/src/storage/: artwork.rs  component.rs  game.rs  mod.rs
crates/storefront-manager/: Cargo.toml
crates/storefront-manager/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme-manager/: Cargo.toml
crates/theme-manager/src/: lib.rs  macros.rs  theme.rs
crates/theme/src/: error.rs  lib.rs  theme.rs
crates/thrustr/: Cargo.toml
crates/thrustr-plugin/: Cargo.toml
crates/thrustr-plugin/src/: config.rs  kv_store.rs  lib.rs
crates/thrustr-plugin/wit/: config.wit  kv-store.wit  plugin.wit  storefront.wit  types.wit
crates/thrustr/src/: app.rs  cache.rs  main.rs  navigation.rs  tokio.rs
crates/thrustr/src/components/: mod.rs  sidebar.rs  topbar.rs
crates/thrustr/src/conversions/: image.rs
crates/thrustr/src/extensions/: context.rs
crates/thrustr/src/globals/: artwork_global.rs  component.rs  event.rs  game.rs  mod.rs  plugin.rs  storefront.rs  task.rs  theme.rs
crates/thrustr/src/routes/: collections.rs  game.rs  home.rs  library.rs  mod.rs  root.rs  settings.rs
crates/thrustr/src/routes/settings/: appearance.rs  config.rs  mod.rs  plugins.rs  storefronts.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  traits.rs
crates/webview-helper/: Cargo.toml  README.md
crates/webview-helper/src/: main.rs
hooks/: commit-msg
plugins/: README.md
plugins/epic-games/: Cargo.toml  manifest.toml  xtp.toml
plugins/epic-games/src/: lib.rs  pdk.rs
plugins/epic-games/src/api/: endpoints.rs  mod.rs  models.rs
plugins/legacy-games/: Cargo.toml  manifest.toml
plugins/legacy-games/src/: error.rs  lib.rs  mapper.rs  mappers.rs
plugins/legacy-games/src/api/: client.rs  endpoints.rs  error.rs  mod.rs  models.rs
plugins/schemas/: base.yaml
tools/commit_lint/: Cargo.toml
tools/commit_lint/src/: main.rs
wit/: plugin.wit
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: build_plugins.rs  mod.rs  setup.rs
(+72 files in other folders)
