[workspace]
resolver = "3"
members = ["crates/*", "plugins/*", "tools/*", "xtask"]
default-members = ["crates/thrustr"]

[workspace.dependencies]
# Local
application = { path = "crates/application" }
assets = { path = "crates/assets" }
component-registry = { path = "crates/component-registry" }
config = { path = "crates/config" }
domain = { path = "crates/domain" }
event = { path = "crates/event" }
pdk = { path = "crates/pdk" }
plugin-manager = { path = "crates/plugin-manager" }
sqlite-storage = { path = "crates/sqlite-storage" }
theme-manager = { path = "crates/theme-manager" }
ui = { path = "crates/ui" }

# External
anyhow = "1"
async-trait = "0.1.89"
dashmap = "6"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_macros = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
smol = "2"
tokio = { version = "1.48", features = ["full"] }
toml = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
