[package]
name = "artwork"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
config.workspace = true
connectivity.workspace = true
domain.workspace = true
runtime.workspace = true

# External
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
dashmap.workspace = true
image = "0.25"
reqwest.workspace = true
tokio.workspace = true
webp = "0.3"
