[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
ports.workspace = true

# External
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
wasmtime = "41"
wasmtime-wasi = "41"
wasmtime-wasi-http = "41"
xutex.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
