[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
event.workspace = true
ports.workspace = true
storefront-manager.workspace = true

# External
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
toml.workspace = true
wasmtime = "41"
wasmtime-wasi = "41"
wasmtime-wasi-http = "41"
zip = { version = "2", default-features = false, features = ["deflate"] }
