[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
component-manager.workspace = true
event.workspace = true
ports.workspace = true

# External
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
toml.workspace = true
wasmtime = "42"
wasmtime-wasi = "42"
wasmtime-wasi-http = "42"
zip = { version = "2", default-features = false, features = ["deflate"] }
