[package]
name = "plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
component.workspace = true
domain.workspace = true
event.workspace = true

# External
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
toml.workspace = true
wasmtime = "43"
wasmtime-wasi = "43"
wasmtime-wasi-http = "43"
zip = { version = "2", default-features = false, features = ["deflate"] }
