[package]
name = "plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
component.workspace = true
domain.workspace = true
event.workspace = true

# External
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
http = "1"
http-body-util = "0.1"
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
tokio.workspace = true
toml.workspace = true
wasmtime = "46"
wasmtime-wasi = { version = "46", features = ["p3"] }
wasmtime-wasi-http = { version = "46", features = ["p3"] }
zip.workspace = true
