[package]
name = "sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
domain.workspace = true

# External
anyhow.workspace = true
diesel = { version = "2.3", features = ["sqlite", "serde_json", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3"
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
config.workspace = true
