[package]
name = "thrustr"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
assets.workspace = true
component.workspace = true
config.workspace = true
connectivity.workspace = true
domain.workspace = true
event.workspace = true
futures.workspace = true
game.workspace = true
image.workspace = true
plugin.workspace = true
sqlite.workspace = true
theme.workspace = true
ui.workspace = true

# External
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
lru.workspace = true
serde_json.workspace = true
smallvec.workspace = true
smol.workspace = true
tokio.workspace = true
