[package]
name = "legacy-games"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
golem-wasi-http = { version = "0.2.0", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thrustr-plugin.workspace = true
thiserror = "2"
wasip2 = "1"

[lib]
crate-type = ["cdylib"]
